--- a/main.css
+++ b/main.css
@@ -99,7 +99,7 @@
 .radio-theme.light label {display: none;}
 .radio-theme.dark label {
     width: 513px;
-    background: url("https://imgh.us/theme_1.png") !important;
+    background: url("https://imagizer.imageshack.us/v2/150x100q90/924/ZvoiTq.png") !important;
     background-size: cover;
 	border-color: #282828 !important;
 }
